# bookings

./: Dockerfile  docker-compose.yml  pyproject.toml
app/: config.py  exceptions.py  logger.py  main.py  utils.py
app/admin/: auth.py
app/alembic/: env.py
app/alembic/versions/: c02279eea27e_init_migration.py  d301512bcdca_.py
app/bookings/: dao.py  models.py  router.py
app/dao/: base.py
app/hotels/: dao.py  models.py  router.py
app/hotels/rooms/: dao.py  models.py  schemas.py
app/images/: router.py
app/pages/: router.py
app/prometheus/: router.py
app/tasks/: email_templates.py  tasks.py
app/templates/: base.html
app/templates/auth/: login.html  register.html
app/templates/bookings/: bookings.html
app/templates/hotels_and_rooms/: rooms.html
app/tests/: conftest.py
app/tests/integration_test/test_bookings/: test_api.py  test_dao.py
app/tests/integration_test/test_hotels/: test_api.py
app/tests/unit_tests/test_hotels/: test_dao.py
app/tests/unit_tests/test_users/: test_dao.py
app/users/: dependencies.py  models.py  router.py
docker/: app.sh  celery_flower_run.sh  test.sh
